--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-summary-plugin",
+	"name": "Summary Plugin",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Summarize documents using Claude CLI based on linked PDF/HTML files.",
+	"author": "kdkyum",
+	"authorUrl": "",
+	"fundingUrl": "",
+	"isDesktopOnly": true
 }
